<resources>
    <string name="app_name">CurrencyExchangeSender</string>
    <string name="action_settings">Settings</string>
    <string name="appTitle">Currency Converter App</string>
    <string name="AmountLabel">Dollar Amount $:</string>
    <string name="Amount">0.00</string>
    <string name="ConvertToLabel">Convert To:</string>
    <string name="buttonConvert">Convert</string>
    <string name="buttonClose">Close</string>
    <string name="radioButtonPound">British Pound</string>
    <string name="radioButtonRupee">Indian Rupee</string>
    <string name="radioButtonYen">Yen</string>
</resources>
